# ai-document-analyzer

./: .env.example  README.md  pyproject.toml
app/: __init__.py  analyzer.py  main.py  schemas.py
tests/: test_analyzer.py  test_api.py
